[package]
name = "test_async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-compression = { version = "0.3.15", features = ["tokio", "gzip", "all"] }
clap = { version = "4.2.2", features = ["derive"] }
flate2 = "1.0.25"
futures = "0.3.28"
tokio = { version = "1.27.0", features = ["full"] }
